Splitting of Help

--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -61,9 +61,9 @@
             {% else %}
                 <h2 class="d-flex justify-content-between align-items-center">
                     <span>{% trans "Issued Domain Credentials" %}</span>
-                    <a href="{% url 'devices:help_dispatch' pk=device.pk %}" class="btn btn-primary"
+                    <a href="{% url 'devices:help_dispatch_domain' pk=device.pk %}" class="btn btn-primary"
                        style="width: 25rem;">
-                        {% trans "Help - Issue New Credentials" %}
+                        {% trans "Help - Issue New Domain Credentials" %}
                     </a>
                 </h2>
                 <hr>
@@ -130,7 +130,11 @@
 
             {% if device.pki_protocol != device.PkiProtocol.MANUAL.value %}
                 <h2 class="d-flex justify-content-between align-items-center">
-                    <span>{% trans "Issued Application Credentials" %}</span>
+                    <span>{% trans "Issued Application Credentials" %}</span> <a
+                        href="{% url 'devices:help_dispatch_application' pk=device.pk %}" class="btn btn-primary"
+                        style="width: 25rem;">
+                    {% trans "Help - Issue New Application Credentials" %}
+                </a>
                     {% if device.onboarding_status != device.OnboardingStatus.PENDING.value %}
                         <a href="{% url 'devices:help_dispatch' pk=device.pk %}" class="btn btn-primary"
                            style="width: 25rem;">
