--- a/trustpoint/templates/devices/help/onboarding/cmp_shared_secret_application_credentials.html
+++ b/trustpoint/templates/devices/help/onboarding/cmp_shared_secret_application_credentials.html
@@ -23,21 +23,7 @@
                     <h2>{% trans 'Summary' %}</h2>
                     <hr>
                     <ul class="tp-kvp-list">
-                        <li>
-                            <div>{% trans 'Domain Credential Request URL' %}</div>
 
-                            <div class="copy-container" style="position: relative;">
-                                <code class="command-text language-bash">
-                                    https://{{ host }}/.well-known/cmp/initialization/{{ device.domain }}
-                                </code>
-
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
-                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
-                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
-                                    </svg>
-                                </button>
-                            </div>
-                        </li>
                         <li>
                             <div>{% trans 'TLS-Client Certificate Request URL' %}</div>
                             <div class="copy-container" style="position: relative;">
@@ -45,7 +31,8 @@
                                     https://{{ host }}/.well-known/cmp/certification/{{ device.domain }}/tls-client/
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -59,7 +46,8 @@
                                     https://{{ host }}/.well-known/cmp/certification/{{ device.domain }}/tls-server/
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -73,7 +61,8 @@
                                     {{ device.cmp_shared_secret }}
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -92,87 +81,6 @@
                     </ul>
                     <hr>
 
-                    <h2 class="mt-5">{% trans 'OpenSSL 3.x Commands' %}</h2>
-                    <hr>
-
-                    <ul class="tp-kvp-list">
-                        <li>
-                            <h3 class="mt-5">{% trans 'Domain Credential Key-Pair Generation' %}</h3>
-                            <hr>
-                            <div>{% trans 'OpenSSL Command' %}</div>
-                            <div class="copy-container" style="position: relative;">
-                                <code class="command-text language-bash">
-                                    {{ domain_credential_key_gen_command }}
-                                </code>
-
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
-                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
-                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
-                                    </svg>
-                                </button>
-                            </div>
-                        </li>
-                    </ul>
-
-                    <ul class="tp-kvp-list">
-
-                        <li>
-                            <h2 class="mt-5">{% trans 'Domain Credential Onboarding' %}</h2>
-                            <hr>
-                            <div>{% trans 'OpenSSL Command' %}</div>
-
-                            <div class="copy-container" style="position: relative;">
-                                <code class="command-text language-bash">
-                                    openssl cmp \<br>
-                                    -cmd ir \<br>
-                                    -implicit_confirm \<br>
-                                    -server https://{{ host }}/.well-known/cmp/initialization/{{ device.domain }}/ \<br>
-                                    -tls_used \<br>
-                                    -ref {{ device.id }} \<br>
-                                    -secret pass:{{ device.cmp_shared_secret }} \<br>
-                                    -subject "/CN=Trustpoint Domain Credential" \<br>
-                                    -newkey domain_credential_key.pem \<br>
-                                    -certout domain_credential_cert.pem \<br>
-                                    -chainout chain_without_root.pem \<br>
-                                    -extracertsout full_chain.pem
-                                </code>
-
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
-                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
-                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
-                                    </svg>
-                                </button>
-
-                            </div>
-                        </li>
-                    </ul>
-
-                    <h2 class="mt-5">{% trans 'Download or Copy Issuing CA Certificate' %}</h2>
-                    <hr>
-                    <ul class="tp-kvp-list">
-                        <li>
-                            <div>{% trans 'Download Issuing CA Certificate' %}</div>
-                            <div>
-                                <a class="btn btn-primary min-width-15 mb-3" href="{% url 'pki:certificate-issuing-ca-download' pk=device.domain.issuing_ca.credential.certificate.id %}">Download Issuing CA</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                {% trans 'Issuing CA in PEM format. You can copy this and paste it into a new file named issuing_ca_cert.pem' %}
-                            </div>
-                            <div class="copy-container" style="position: relative;">
-                                <code class="command-text language-bash">
-                                    {{ issuing_ca_pem|linebreaksbr }}
-                                </code>
-
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
-                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
-                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
-                                    </svg>
-                                </button>
-                            </div>
-                        </li>
-                    </ul>
 
                     <ul class="tp-kvp-list">
 
@@ -186,7 +94,8 @@
                                     {{ key_gen_command }}
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -205,7 +114,8 @@
                                     openssl cmp \<br>
                                     -cmd cr \<br>
                                     -implicit_confirm \<br>
-                                    -server https://{{ host }}/.well-known/cmp/certification/{{ device.domain }}/tls-client/ \<br>
+                                    -server https://{{ host }}/.well-known/cmp/certification/{{ device.domain }}/tls-client/
+                                    \<br>
                                     -tls_used \<br>
                                     -cert domain_credential_cert.pem \<br>
                                     -key domain_credential_key.pem \<br>
@@ -218,7 +128,8 @@
                                     -srvcert issuing_ca_cert.pem
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -248,7 +159,8 @@
                                     openssl cmp \<br>
                                     -cmd cr \<br>
                                     -implicit_confirm \<br>
-                                    -server https://{{ host }}/.well-known/cmp/certification/{{ device.domain }}/tls-server/ \<br>
+                                    -server https://{{ host }}/.well-known/cmp/certification/{{ device.domain }}/tls-server/
+                                    \<br>
                                     -tls_used \<br>
                                     -cert domain_credential_cert.pem \<br>
                                     -key domain_credential_key.pem \<br>
@@ -262,7 +174,8 @@
                                     -srvcert issuing_ca_cert.pem
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -284,7 +197,8 @@
                             <div>{% trans 'Subject Alternative Name (SAN)' %}</div>
                             <div>
                                 -sans "critical 127.0.0.1 ::1 localhost"<br><br>
-                                {% trans 'Add as many SAN entries as desired, separated by whitespace. At least one must be given. The default is to make the SAN extension critical. To make it non-critical, remove the keyword critical.' %}</div>
+                                {% trans 'Add as many SAN entries as desired, separated by whitespace. At least one must be given. The default is to make the SAN extension critical. To make it non-critical, remove the keyword critical.' %}
+                            </div>
                         </li>
                     </ul>
                     <hr>
@@ -294,7 +208,8 @@
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <div class="tp-card-btn-footer m-1">
                     <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans "Back" %}</a>
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}" class="btn btn-primary">{% trans "Lifecycle Management" %}</a>
+                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
+                       class="btn btn-primary">{% trans "Lifecycle Management" %}</a>
                 </div>
             </div>
         </div>
