--- a/trustpoint/templates/devices/help/onboarding/cmp_shared_secret_domain_credentials.html
+++ b/trustpoint/templates/devices/help/onboarding/cmp_shared_secret_domain_credentials.html
@@ -152,15 +152,14 @@
                         </li>
                     </ul>
 
-                  
+
                 </div>
 
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <div class="tp-card-btn-footer m-1">
-                    <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans "Back" %}</a>
                     <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
-                       class="btn btn-primary">{% trans "Lifecycle Management" %}</a>
+                       class="btn btn-secondary">{% trans "Back" %}</a>
                 </div>
             </div>
         </div>
