Initial support for OPC UA application certs

--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -56,6 +56,12 @@
                     <br>
                     <a href="{% url 'devices:certificate_lifecycle_management-issue_tls_server_credential' pk=device.id %}"
                        class="btn btn-primary tp-table-btn min-width-20 mt-3">{% trans "Issue New TLS-Server Credential" %}</a>
+                    <hr>
+                    <a href="{% url 'devices:certificate_lifecycle_management-issue_opcua_client_credential' pk=device.id %}"
+                       class="btn btn-primary tp-table-btn min-width-20">{% trans "Issue New OPC UA Client Credential" %}</a>
+                    <br>
+                    <a href="{% url 'devices:certificate_lifecycle_management-issue_opcua_server_credential' pk=device.id %}"
+                       class="btn btn-primary tp-table-btn min-width-20 mt-3">{% trans "Issue New OPC UA Server Credential" %}</a>
                     <div class="mb-5"></div>
                 {% endif %}
             {% else %}
