--- a/trustpoint/templates/devices/credentials/issue_application_credential.html
+++ b/trustpoint/templates/devices/credentials/issue_application_credential.html
@@ -10,12 +10,12 @@
         <div class="card">
             <div class="card-header">
                 <div>
-                    <h1>{% trans 'Issue Domain Credential' %}</h1>
+                    <h1>{% trans 'Issue Application Credential' %}</h1>
                 </div>
             </div>
             <div class="card-body">
                 <div class="tp-card-centered-content">
-                    <h2>{% trans 'Domain Credential Details' %}</h2>
+                    <h2>{% trans 'Application Credential Details' %}</h2>
                     <hr>
                     {{ form|crispy }}
                 </div>
@@ -24,7 +24,7 @@
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <div class="tp-card-btn-footer m-1">
                     <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}" class="btn btn-secondary">{% trans "Cancel" %}</a>
-                    <button type="submit" class="btn btn-primary">{% trans "Issue Domain Credential" %}</button>
+                    <button type="submit" class="btn btn-primary">{% trans "Issue Application Credential" %}</button>
                 </div>
             </div>
         </div>
