--- a/trustpoint/templates/devices/help/onboarding/est_ldevid.html
+++ b/trustpoint/templates/devices/help/onboarding/est_ldevid.html
@@ -15,7 +15,7 @@
         <div class="card">
             <div class="card-header">
                 <div>
-                    <h1>{% trans 'Help - No Onboarding - EST Username Password' %}</h1>
+                    <h1>{% trans 'Help - Application Certificates - EST Domain Credential Authentication' %}</h1>
                 </div>
             </div>
             <div class="card-body">
@@ -24,10 +24,10 @@
                     <hr>
                     <ul class="tp-kvp-list">
                         <li>
-                            <div>{% trans 'Domain Credential Request URL' %}</div>
+                            <div>{% trans 'TLS-Client Certificate Request URL' %}</div>
                             <div class="copy-container" style="position: relative;">
                                 <code class="command-text language-bash">
-                                    https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/domaincredetial/
+                                    https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsclient/
                                 </code>
 
                                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
@@ -36,6 +36,21 @@
                                     </svg>
                                 </button>
                             </div>
+                        </li>
+                        <li>
+                            <div>{% trans 'TLS-Server Certificate Request URL' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                    https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsserver/
+                                </code>
+
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+
                         </li>
                         <li>
                             <div>{% trans 'EST Username' %}</div>
@@ -102,7 +117,7 @@
                     <ul class="tp-kvp-list">
 
                         <li>
-                            <h2 class="mt-5">{% trans 'Domain Credential CSR Generation' %}</h2>
+                            <h2 class="mt-5">{% trans 'TLS-Client CSR Generation' %}</h2>
                             <hr>
                             <div>{% trans 'OpenSSL Command' %}</div>
                             <div class="copy-container" style="position: relative;">
@@ -112,7 +127,7 @@
                                     -key key.pem \<br>
                                     -outform der \<br>
                                     -out my_csr.der \<br>
-                                    -subj "/CN={{ domain_credential_cn }}"
+                                    -subj "/CN={{ tls_client_cn }}"
                                 </code>
 
                                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
@@ -123,8 +138,45 @@
 
                             </div>
                         </li>
+                        <li>
+                            <h3 class="mt-3">{% trans 'Mutable Parameters' %}</h3>
+                            <hr>
+                            <div>{% trans 'Common Name' %}</div>
+                            <div>{{ tls_client_cn }}</div>
+                        </li>
                     </ul>
+                    <ul class="tp-kvp-list">
+                        <li>
+                            <h2 class="mt-5">{% trans 'TLS-Server CSR Generation' %}</h2>
+                            <hr>
+                            <div>{% trans 'OpenSSL Command' %}</div>
+                       
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                    openssl req \<br>
+                                    -new \<br>
+                                    -key key.pem \<br>
+                                    -outform der \<br>
+                                    -out my_csr.der \<br>
+                                    -subj "CN=/{{ tls_server_cn }}"
+                                </code>
 
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+
+                            </div>
+                        </li>
+                        <li>
+                            <h3 class="mt-3">{% trans 'Mutable Parameters' %}</h3>
+                            <hr>
+                            <div>{% trans 'Common Name' %}</div>
+                            <div>-sub "/CN={{ tls_server_cn }}"</div>
+                        </li>
+
+                    </ul>
 
                     <hr>
 
@@ -155,41 +207,21 @@
                         </li>
                     </ul>
 
-                    <h2 class="mt-5">{% trans 'Request and Transform Domain Credential' %}</h2>
+                    <h2 class="mt-5">{% trans 'curl Commands' %}</h2>
                     <hr>
                     <ul class="tp-kvp-list">
                         <li>
-                            <h3 class="mt-5">{% trans 'Request Domain Credential' %}</h3>
+                            <h3 class="mt-5">{% trans 'TLS Client' %}</h3>
                             <hr>
                             <div>{% trans 'curl Command' %}</div>
                             <div class="copy-container" style="position: relative;">
                                 <code class="command-text language-bash">
-                                    curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
+                                    curl --cert domain_credential_cert.pem --key domain_credential_key.pem \ \<br>
                                      --cacert server_cert.pem \<br>
                                      --header "Content-Type: application/pkcs10" \<br>
                                      --data-binary "@my_csr.der" \<br>
-                                     -o domain_credential_cert.der \<br>
-                                     https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/domaincredential/
-                                </code>
-
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
-                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
-                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
-                                    </svg>
-                                </button>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h3 class="mt-5">{% trans 'Convert DER-encoded file to PEM' %}</h3>
-                            <hr>
-                            <div>{% trans 'OpenSSL command' %}</div>
-                            <div class="copy-container" style="position: relative;">
-                                <code class="command-text language-bash">
-                                    openssl x509 \<br>
-                                    -inform der \<br>
-                                    -in domain_credential_cert.der \<br>
-                                    -out domain_credential_cert.pem
+                                     -o certificate.der \<br>
+                                     https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsclient/
                                 </code>
 
                                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
@@ -200,6 +232,32 @@
                             </div>
                         </li>
                     </ul>
+                    <ul class="tp-kvp-list">
+                        <li>
+                            <h3 class="mt-5">{% trans 'TLS Server' %}</h3>
+                            <hr>
+                            <div>{% trans 'curl Command' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                    curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
+                                     --cacert server_cert.pem \<br>
+                                     --header "Content-Type: application/pkcs10" \<br>
+                                     --data-binary "@my_csr.der" \<br>
+                                     -o certificate.der \<br>
+                                     https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsserver/
+                                </code>
+
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                        </li>
+                    </ul>
+
+
+
                 </div>
 
             </div>
