Added functionalities to view

--- a/trustpoint/templates/devices/help/no_onboarding/est_username_password.html
+++ b/trustpoint/templates/devices/help/no_onboarding/est_username_password.html
@@ -30,7 +30,8 @@
                                     https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsclient/
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -44,7 +45,8 @@
                                     https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsserver/
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -59,7 +61,8 @@
                                     {{ device.est_username }}
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -73,7 +76,8 @@
                                     {{ device.est_password }}
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -105,7 +109,8 @@
                                     {{ key_gen_command }}
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -130,7 +135,8 @@
                                     -subj "/CN={{ tls_client_cn }}"
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -150,7 +156,7 @@
                             <h2 class="mt-5">{% trans 'TLS-Server CSR Generation' %}</h2>
                             <hr>
                             <div>{% trans 'OpenSSL Command' %}</div>
-                       
+
                             <div class="copy-container" style="position: relative;">
                                 <code class="command-text language-bash">
                                     openssl req \<br>
@@ -161,7 +167,8 @@
                                     -subj "CN=/{{ tls_server_cn }}"
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -186,7 +193,8 @@
                         <li>
                             <div>{% trans 'Download TLS Server Certificate' %}</div>
                             <div>
-                                <a class="btn btn-primary min-width-15 mb-3" href="{% url 'pki:trustpoint-tls-server-download' %}">Download Server Certificate</a>
+                                <a class="btn btn-primary min-width-15 mb-3"
+                                   href="{% url 'pki:trustpoint-tls-server-download' %}">Download Server Certificate</a>
                             </div>
                         </li>
                         <li>
@@ -198,7 +206,8 @@
                                     {{ trustpoint_server_certificate|linebreaksbr }}
                                 </code>
 
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -207,24 +216,56 @@
                         </li>
                     </ul>
 
-                    <h2 class="mt-5">{% trans 'curl Commands' %}</h2>
+                    <h2 class="mt-5">{% trans 'EST capabilities' %}</h2>
                     <hr>
                     <ul class="tp-kvp-list">
                         <li>
-                            <h3 class="mt-5">{% trans 'TLS Client' %}</h3>
+                            <h3 class="mt-5">{% trans 'Application Certificates' %}</h3>
                             <hr>
-                            <div>{% trans 'curl Command' %}</div>
+                            <div>{% trans 'Enroll TLS Client Certificate' %}</div>
                             <div class="copy-container" style="position: relative;">
                                 <code class="command-text language-bash">
                                     curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
-                                     --cacert server_cert.pem \<br>
-                                     --header "Content-Type: application/pkcs10" \<br>
-                                     --data-binary "@my_csr.der" \<br>
-                                     -o certificate.der \<br>
-                                     https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsclient/
+                                    --cacert server_cert.pem \<br>
+                                    --header "Content-Type: application/pkcs10" \<br>
+                                    --data-binary "@my_csr.der" \<br>
+                                    -o certificate.der \<br>
+                                    https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsclient/
                                 </code>
-
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                            <div>{% trans 'Enroll TLS Server Certificate' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                    curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
+                                    --cacert server_cert.pem \<br>
+                                    --header "Content-Type: application/pkcs10" \<br>
+                                    --data-binary "@my_csr.der" \<br>
+                                    -o certificate.der \<br>
+                                    https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsserver/
+                                </code>
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                            <div>{% trans 'Convert DER to PEM' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                    openssl x509 \<br>
+                                    -inform der \<br>
+                                    -in certificate.der \<br>
+                                    -out certificate.pem
+                                </code>
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -232,22 +273,38 @@
                             </div>
                         </li>
                     </ul>
+
                     <ul class="tp-kvp-list">
                         <li>
-                            <h3 class="mt-5">{% trans 'TLS Server' %}</h3>
+                            <h3 class="mt-5">{% trans 'CA Certificate Chain' %}</h3>
                             <hr>
                             <div>{% trans 'curl Command' %}</div>
                             <div class="copy-container" style="position: relative;">
                                 <code class="command-text language-bash">
-                                    curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
-                                     --cacert server_cert.pem \<br>
-                                     --header "Content-Type: application/pkcs10" \<br>
-                                     --data-binary "@my_csr.der" \<br>
-                                     -o certificate.der \<br>
-                                     https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/tlsserver/
+                                    curl -X GET \<br>
+                                    "https://{{ host }}/.well-known/est/cacerts/{{ device.domain }}/" \<br>
+                                    --cacert server_cert.pem \<br>
+                                    -H "Accept: application/pkcs7-mime" \<br>
+                                    -o cacerts.p7b
                                 </code>
-
-                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                            <div>{% trans 'Convert PKCS7 to PEM' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                    openssl pkcs7 \<br>
+                                    -print_certs \<br>
+                                    -inform DER \<br>
+                                    -in cacerts.p7b \<br>
+                                    -out cacerts.pem
+                                </code>
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
@@ -255,7 +312,6 @@
                             </div>
                         </li>
                     </ul>
-
 
 
                 </div>
@@ -264,7 +320,8 @@
             <div class="card-footer">
                 <div class="tp-card-btn-footer">
                     <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans "Back" %}</a>
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}" class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
+                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
+                       class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
                 </div>
             </div>
         </div>
