--- a/trustpoint/templates/devices/help/onboarding/est_username_password.html
+++ b/trustpoint/templates/devices/help/onboarding/est_username_password.html
@@ -155,13 +155,13 @@
                         </li>
                     </ul>
 
-                    <h2 class="mt-5">{% trans 'Request and Transform Domain Credential' %}</h2>
+                    <h2 class="mt-5">{% trans 'EST capabilities' %}</h2>
                     <hr>
                     <ul class="tp-kvp-list">
                         <li>
-                            <h3 class="mt-5">{% trans 'Request Domain Credential' %}</h3>
+                            <h3 class="mt-5">{% trans 'Domain Credential' %}</h3>
                             <hr>
-                            <div>{% trans 'curl Command' %}</div>
+                            <div>{% trans 'Enroll Domain Credential Certificate' %}</div>
                             <div class="copy-container" style="position: relative;">
                                 <code class="command-text language-bash">
                                     curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
@@ -178,12 +178,7 @@
                                     </svg>
                                 </button>
                             </div>
-                        </li>
-
-                        <li>
-                            <h3 class="mt-5">{% trans 'Convert DER-encoded file to PEM' %}</h3>
-                            <hr>
-                            <div>{% trans 'OpenSSL command' %}</div>
+                            <div>{% trans 'Convert DER to PEM' %}</div>
                             <div class="copy-container" style="position: relative;">
                                 <code class="command-text language-bash">
                                     openssl x509 \<br>
@@ -193,6 +188,47 @@
                                 </code>
 
                                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                        </li>
+
+
+                    </ul>
+
+                    <ul class="tp-kvp-list">
+                        <li>
+                            <h3 class="mt-5">{% trans 'CA Certificate Chain' %}</h3>
+                            <hr>
+                            <div>{% trans 'curl Command' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                    curl -X GET \<br>
+                                    "https://{{ host }}/.well-known/est/cacerts/{{ device.domain }}/" \<br>
+                                    --cacert server_cert.pem \<br>
+                                    -H "Accept: application/pkcs7-mime" \<br>
+                                    -o cacerts.p7b
+                                </code>
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                            <div>{% trans 'Convert PKCS7 to PEM' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                    openssl pkcs7 \<br>
+                                    -print_certs \<br>
+                                    -inform DER \<br>
+                                    -in cacerts.p7b \<br>
+                                    -out cacerts.pem
+                                </code>
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
+                                        aria-label="Copy to clipboard">
                                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                                     </svg>
