--- a/trustpoint/templates/devices/devices.html
+++ b/trustpoint/templates/devices/devices.html
@@ -91,7 +91,9 @@
       {% include 'trustpoint/pagination.html' %}
     </div>
       <div class="card-footer d-flex justify-content-between tp-sticky-footer">
-          <div class="m-1">
+          <div class="tp-card-btn-footer m-1">
+              <button type="button" class="btn btn-danger tp-table-select-btn me-2"
+                      data-tp-url="delete">{% trans 'Delete selected' %}</button>
           </div>
           <div class="m-1">
             <a class="btn btn-primary" href="{% url 'devices:add' %}">
