- Enable Save button - Fixed Typo in domain config.html

--- a/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_domain_credential_summary_block.html
+++ b/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_domain_credential_summary_block.html
@@ -11,7 +11,7 @@
             <div>{% trans 'Domain Credential Request URL' %}</div>
             <div class="copy-container" style="position: relative;">
                 <code class="command-text language-bash">
-                    https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/domaincredetial/
+                    https://{{ host }}/.well-known/est/simpleenroll/{{ device.domain }}/domaincredential/
                 </code>
 
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
