--- a/trustpoint/templates/pki/domains/config.html
+++ b/trustpoint/templates/pki/domains/config.html
@@ -209,7 +209,7 @@
                                     <a href="{% url 'pki:domains' %}"
                                        class="btn btn-secondary btn-half">{% trans "Cancel" %}</a>
                                     <button type="submit"
-                                            class="btn btn-primary disabled">{% trans "Save" %}</button>
+                                            class="btn btn-primary">{% trans "Save" %}</button>
                                 </div>
                             </div>
                         </div>
