- added est_notifications_block.html which outputs diffrent notifications if the extected settings are not defined in the domain

--- a/trustpoint/templates/devices/help/onboarding/est_application_credentials.html
+++ b/trustpoint/templates/devices/help/onboarding/est_application_credentials.html
@@ -20,6 +20,8 @@
             </div>
             <div class="card-body">
                 <div class="tp-card-centered-content">
+                    {% include 'devices/help/generic_details/est_notifications_block.html' with expected_allow_app_certs=False expected_allow_username_registration=False expected_username_auth=False expected_domain_auth=True %}
+
                     <h2>{% trans 'Summary' %}</h2>
                     <hr>
                     {% include 'devices/help/generic_details/est_application_credential_summary_block.html' %}
