--- a/trustpoint/templates/devices/help/onboarding/est_username_password.html
+++ b/trustpoint/templates/devices/help/onboarding/est_username_password.html
@@ -20,6 +20,8 @@
             </div>
             <div class="card-body">
                 <div class="tp-card-centered-content">
+                    {% include 'devices/help/generic_details/est_notifications_block.html' with expected_allow_app_certs=False expected_allow_username_registration=True expected_username_auth=True expected_domain_auth=False %}
+
                     <h2>{% trans 'Summary' %}</h2>
                     <hr>
 
