Initial OPC UA GDS capabilities

--- a/trustpoint/templates/devices/opc_ua_gds.html
+++ b/trustpoint/templates/devices/opc_ua_gds.html
@@ -6,7 +6,7 @@
 
     <div class="card" style="max-height: 100%; display: flex; flex-direction: column;">
     <div class="card-header">
-        <h1>{% trans 'Devices' %}</h1>
+        <h1>{% trans 'OPC UA GDS' %}</h1>
     </div>
 
     <div class="card-body text-start" style="overflow: auto; flex-grow: 1; max-height: 90%;">
@@ -17,8 +17,8 @@
           <div class="m-1">
           </div>
           <div class="m-1">
-            <a class="btn btn-primary" href="{% url 'devices:add' %}">
-              {% trans "Add new Device" %}
+            <a class="btn btn-primary" href="{% url 'devices:opc_ua_gds-add' %}">
+              {% trans "Add new OPC UA GDS" %}
             </a>
           </div>
         </div>
