- Updated EST interface to issue OPC UA certs - Added uniform resource identifier to EST args - Added help for OPC UA GDS EST view

--- a/trustpoint/templates/devices/details/devices_table.html
+++ b/trustpoint/templates/devices/details/devices_table.html
@@ -67,7 +67,7 @@
                 </td>
                 <td>{{ device.get_pki_protocol_display }}</td>
                 <td>{{ device.clm_button| safe }}</td>
-                <td><a href="details/{{ device.id }}/" class="btn btn-primary tp-table-btn w-100">Details</a></td>
+                <td>{{ device.detail_button| safe }}</td>
                 <td>{{ device.revoke_button| safe }}</td>
             </tr>
         {% empty %}
